unpackaged/main/default/objects/sked_Drive_Shift_Tag__c/fields/sked_Drive_Shift__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Shift__c</fullName>
    <label>Drive Shift</label>
    <referenceTo>sked_Drive_Shift__c</referenceTo>
    <relationshipLabel>Drive Shift Tags</relationshipLabel>
    <relationshipName>sked_Drive_Shift_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>