unpackaged/main/default/objects/sked_Drive_Shift_Tag__c/fields/sked_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked_Minimum_Quantity__c</fullName>
    <label>Minimum Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>